# GigaChat-API-Project

./: .pre-commit-config.yaml  LICENSE  README.md  auth.py  pyproject.toml  secret_reader.py  version.txt
api/: api_client.py  authentication.py  gigachat.py
chats/: first_chat.py
dto/: data_embeddings_dto.py  data_files_dto.py  generic.py  get_files_dto.py  get_model_list_dto.py  message_completions_dto.py  models_data_dto.py  post_chat_completions_image_request_dto.py  post_chat_completions_text_request_dto.py  post_embeddings_dto.py  post_embeddings_request_dto.py  post_file_delete_dto.py  post_file_dto.py  post_token_count_dto.py  post_token_count_request_dto.py  usage_dto.py
enums/: message_roles.py  model_ids.py  supported_file_formats.py
giga_chat/: giga_chat_init.py
utility/: config.py  custom_logging.py  tools.py
