[project]
name = "gigachat-api-project"
version = "0.1.0"
description = "blah-blah"
authors = [
    {name = "Konyukhov Alexander",email = "jesusmisha@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
