[project]
name = "gigachat-api-project"
version = "0.2.0"
description = "blah-blah"
authors = [
    {name = "Konyukhov Alexander",email = "jesusmisha@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "ruff (>=0.11.0,<0.12.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
